server/ubuntu-server/ubuntu-sg.tf
resource "aws_security_group" "ubuntu-sg" {
  name        = "ubuntu-sg"
  description = "Ubuntu Server Security Group"

  ingress {
    description = "Ububntu Server Inbound Rule"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Ububntu Server Inbound Rule"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ubuntu-sg"
  }
}
